<resources>
    <string name="app_name">MyNotes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnBackTxt">Back</string>
    <string name="btnStgnsTxt">Settings</string>
    <string name="btnMainTxt">Notes</string>
    <string name="btnInfoTxt">Info</string>
    <string name="infoTxtFragment">INFO</string>
    <string name="use_back_stack">USE BACK STACK</string>
    <string name="back_as_remove_fragment">Back as remove fragment</string>
    <string name="delete_before_add">Delete before add</string>
    <string name="replace">Replace</string>
    <string name="add">ADD</string>
    <string name="info_txt">App Notes by Vasiliy Khrapov</string>
    <string name="my_code_link">My code: https://github.com/hrapov-v/less6HW</string>
    <string name="welcomeTxt">©Super notes by V.H.</string>
    <string name="action_stgns_ttl">Settings</string>
    <string name="search_action_ttl">Search</string>
    <string name="nav_menu_txt">Меню</string>
    <string name="open_drawer_menu">Открыли</string>
    <string name="close_drawer_menu">Закрыли</string>
    <string name="deleteNoteMenuBtn">Удалить заметку</string>
    <string name="addNoteMenuBtn">Добавить заметку</string>
    <string name="noteBodyTxt">Текст заметки</string>
    <string name="titleNote">Заголовок</string>
    <string name="noteNameFragmentCard">Заголовок</string>
    <string name="noteBodyFragmentCard">Описание</string>
    <string name="settingsDescription">Test settings that have lost half of their functionality</string>
    <string name="settingsName">Settings</string>
</resources>