<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:orderInCategory="2"
        android:title="@string/btnStgnsTxt"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_main"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:orderInCategory="1"
        android:title="@string/btnMainTxt"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_info"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="4"
        android:title="@string/btnInfoTxt"
        app:showAsAction="always" />

</menu>